Classification_Task_0.ipynb

--- a/Classification_Task_0.ipynb
+++ b/Classification_Task_0.ipynb
@@ -265,7 +265,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Classification Task-0\n"
+        "#Classification Task-0: Split dataset into 70 and 30\n"
       ],
       "metadata": {
         "id": "v3IHGvmiqgqq"
