Classification_Task_III(Strips).ipynb

--- a/Classification_Task_III(Strips).ipynb
+++ b/Classification_Task_III(Strips).ipynb
@@ -267,7 +267,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Classification Task-III"
+        "# Classification Task-III: Test on Vertical Strip of one dataset and horizontal strip of other"
       ],
       "metadata": {
         "id": "v3IHGvmiqgqq"
