Update Classification_Task_II(All obstacle config).ipynb

--- a/Classification_Task_II(All obstacle config).ipynb
+++ b/Classification_Task_II(All obstacle config).ipynb
@@ -249,8 +249,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Classfication Task-II\n",
-        "(All Obstacle Configuration)\n"
+        "# Classfication Task-II:All Obstacle Configuration\n",
       ],
       "metadata": {
         "id": "v3IHGvmiqgqq"
