--- a/Radio-Maps.ipynb
+++ b/Radio-Maps.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-03-14T11:07:51.096305Z",
@@ -30,7 +30,7 @@
           "shell.execute_reply": "2025-03-14T11:07:52.076110Z"
         },
         "id": "mr9lnh86TFbv",
-        "outputId": "a8211d57-2177-4a30-ad7a-cda4f86fa492",
+        "outputId": "543d9ef5-e5d0-4340-eded-ac8c7ffd74a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -45,9 +45,9 @@
             "Collecting drjit\n",
             "  Downloading drjit-1.0.5-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (7.0 kB)\n",
             "Downloading mitsuba-3.6.4-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (57.7 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.7/57.7 MB\u001b[0m \u001b[31m17.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.7/57.7 MB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading drjit-1.0.5-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.3 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.3/4.3 MB\u001b[0m \u001b[31m30.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.3/4.3 MB\u001b[0m \u001b[31m53.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: drjit, mitsuba\n",
             "Successfully installed drjit-1.0.5 mitsuba-3.6.4\n"
           ]
@@ -89,12 +89,12 @@
       "metadata": {
         "id": "GeQGmwRxTUKe"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-03-14T11:07:52.081181Z",
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2025-03-14T11:07:52.342888Z",
@@ -144,7 +144,7 @@
           "shell.execute_reply": "2025-03-14T11:07:53.116057Z"
         },
         "id": "3fKtCkbhTFb1",
-        "outputId": "5df6a033-6835-4c12-e1ff-cbe27b880090",
+        "outputId": "0a1004cd-7a1d-428f-c7e5-bca965730593",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -191,6 +191,38 @@
         "\n",
         "# Visulaize SINR\n",
         "rm.show(metric=\"sinr\");"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rm.rss"
+      ],
+      "metadata": {
+        "id": "2-XLmGwPues9",
+        "outputId": "055cac84-459f-492f-948a-b00939962d57",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[[9.54585e-09, 1.04603e-08, 9.28817e-09, .. 74 skipped .., 1.02857e-07, 9.90055e-08, 9.60405e-08],\n",
+              "  [9.50254e-09, 9.38407e-09, 1.02875e-08, .. 74 skipped .., 1.11902e-07, 1.08877e-07, 1.04629e-07],\n",
+              "  [7.36948e-09, 1.03763e-08, 1.02305e-08, .. 74 skipped .., 1.23768e-07, 1.17616e-07, 1.1343e-07],\n",
+              "  .. 74 skipped ..,\n",
+              "  [5.29373e-09, 5.247e-09, 5.20108e-09, .. 74 skipped .., 1.44879e-08, 1.36657e-08, 1.28509e-08],\n",
+              "  [5.34698e-09, 6.61352e-09, 6.54718e-09, .. 74 skipped .., 1.47324e-08, 1.30301e-08, 1.30627e-08],\n",
+              "  [5.37687e-09, 5.32866e-09, 5.28131e-09, .. 74 skipped .., 1.32276e-08, 1.14729e-08, 1.23978e-08]]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
       ]
     }
   ],
