--- a/Classification_Task_III(Strips).ipynb
+++ b/Classification_Task_III(Strips).ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {
         "id": "7tlIJsz_jn1-"
       },
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "BPoQpejhlG51"
       },
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -148,7 +148,7 @@
       "metadata": {
         "id": "r80SftLMjqjP"
       },
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "W9SnDuj5j0j6"
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "rMBy6G3Jj1D9"
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -221,9 +221,9 @@
           "height": 0
         },
         "id": "TsmIRQ4BjxSC",
-        "outputId": "0e7c452b-6c5e-4ba0-e3fb-a875d728faa7"
+        "outputId": "0a1f8691-f15b-4b5e-b869-2885c826d671"
       },
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +292,7 @@
       "metadata": {
         "id": "QEvWNQrImf3_"
       },
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -353,9 +353,9 @@
           "height": 1000
         },
         "id": "xWsN3Wpvlqhu",
-        "outputId": "1563ba0f-813d-4c09-cc0d-87c247298a4d"
+        "outputId": "d9346fae-c7fb-4bbe-ff52-a88b757d1f5d"
       },
-      "execution_count": 29,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,30 +388,30 @@
           "name": "stdout",
           "text": [
             "    row  col  obstacle  tx_row  tx_column  covered  \\\n",
-            "0     8    0         0       0          0        0   \n",
-            "1     5    9         1       0          0        0   \n",
-            "2     0    6         0       0          0        1   \n",
-            "3     1    2         0       0          0        1   \n",
-            "4     4    0         0       0          0        1   \n",
+            "0     7    9         0       0          0        0   \n",
+            "1     3    7         0       0          0        1   \n",
+            "2     6    5         0       0          0        0   \n",
+            "3     5    4         1       0          0        0   \n",
+            "4     1    5         0       0          0        1   \n",
             "..  ...  ...       ...     ...        ...      ...   \n",
-            "95    9    5         0       0          0        0   \n",
-            "96    1    7         0       0          0        1   \n",
-            "97    6    4         0       0          0        0   \n",
-            "98    3    2         0       0          0        1   \n",
-            "99    0    4         0       0          0        1   \n",
+            "95    3    2         0       0          0        1   \n",
+            "96    9    7         0       0          0        0   \n",
+            "97    3    4         0       0          0        1   \n",
+            "98    0    7         0       0          0        1   \n",
+            "99    8    0         0       0          0        0   \n",
             "\n",
             "    Blindspot(blocked=1/not blocked=0)  \n",
             "0                                    1  \n",
             "1                                    0  \n",
-            "2                                    0  \n",
+            "2                                    1  \n",
             "3                                    0  \n",
             "4                                    0  \n",
             "..                                 ...  \n",
-            "95                                   1  \n",
-            "96                                   0  \n",
-            "97                                   1  \n",
+            "95                                   0  \n",
+            "96                                   1  \n",
+            "97                                   0  \n",
             "98                                   0  \n",
-            "99                                   0  \n",
+            "99                                   1  \n",
             "\n",
             "[100 rows x 7 columns]\n"
           ]
@@ -430,9 +430,9 @@
           "height": 1000
         },
         "id": "ncX4NcVyt63l",
-        "outputId": "a90382c8-654a-4367-9666-afe2697c7df0"
+        "outputId": "cf8d9b03-d77f-4869-dec6-bef11754b214"
       },
-      "execution_count": 30,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,29 +465,29 @@
           "name": "stdout",
           "text": [
             "    row  col  obstacle  tx_row  tx_column  covered  \\\n",
-            "0     9    2         0       0          0        1   \n",
-            "1     6    4         0       0          0        1   \n",
+            "0     4    8         0       0          0        0   \n",
+            "1     2    8         0       0          0        0   \n",
             "2     8    5         1       0          0        0   \n",
-            "3     3    6         0       0          0        0   \n",
-            "4     9    6         0       0          0        0   \n",
+            "3     8    3         0       0          0        1   \n",
+            "4     1    4         0       0          0        1   \n",
             "..  ...  ...       ...     ...        ...      ...   \n",
-            "95    7    9         0       0          0        0   \n",
-            "96    5    4         0       0          0        1   \n",
-            "97    2    2         0       0          0        1   \n",
-            "98    7    4         0       0          0        1   \n",
-            "99    4    2         0       0          0        1   \n",
+            "95    0    1         0       0          0        1   \n",
+            "96    1    8         0       0          0        0   \n",
+            "97    0    0         0       0          0        1   \n",
+            "98    9    6         0       0          0        0   \n",
+            "99    9    5         1       0          0        0   \n",
             "\n",
             "    Blindspot(blocked=1/not blocked=0)  \n",
-            "0                                    0  \n",
-            "1                                    0  \n",
+            "0                                    1  \n",
+            "1                                    1  \n",
             "2                                    0  \n",
-            "3                                    1  \n",
-            "4                                    1  \n",
+            "3                                    0  \n",
+            "4                                    0  \n",
             "..                                 ...  \n",
-            "95                                   1  \n",
-            "96                                   0  \n",
+            "95                                   0  \n",
+            "96                                   1  \n",
             "97                                   0  \n",
-            "98                                   0  \n",
+            "98                                   1  \n",
             "99                                   0  \n",
             "\n",
             "[100 rows x 7 columns]\n"
@@ -511,10 +511,8 @@
         "#print(train_tx.shape)\n",
         "print(test_tx)'''\n",
         "\n",
-        "train = pd.read_csv(\"train.csv\")\n",
-        "train_data=train[train['col']==5].drop_duplicates()\n",
-        "test= pd.read_csv(\"test.csv\")\n",
-        "test_data=test[test['row']==6].drop_duplicates()\n",
+        "train_data= pd.read_csv(\"train.csv\")\n",
+        "test_data= pd.read_csv(\"test.csv\")\n",
         "print(train_data)\n",
         "print(test_data)\n",
         "X_train = train_data.drop(['Blindspot(blocked=1/not blocked=0)','covered'], axis=1)\n",
@@ -538,89 +536,85 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6bcb097d-0580-4261-c826-051a540b9411"
+        "outputId": "37c7dc8a-25a4-4020-8beb-3a62bcc64cd1"
       },
-      "execution_count": 31,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "    row  col  obstacle  tx_row  tx_column  covered  \\\n",
-            "6     6    5         0       0          0        0   \n",
-            "7     3    5         0       0          0        1   \n",
-            "9     1    5         0       0          0        1   \n",
-            "19    4    5         0       0          0        1   \n",
-            "54    5    5         1       0          0        0   \n",
-            "73    7    5         0       0          0        0   \n",
-            "79    0    5         0       0          0        1   \n",
-            "88    8    5         0       0          0        0   \n",
-            "91    2    5         0       0          0        1   \n",
-            "95    9    5         0       0          0        0   \n",
+            "0     7    9         0       0          0        0   \n",
+            "1     3    7         0       0          0        1   \n",
+            "2     6    5         0       0          0        0   \n",
+            "3     5    4         1       0          0        0   \n",
+            "4     1    5         0       0          0        1   \n",
+            "..  ...  ...       ...     ...        ...      ...   \n",
+            "95    3    2         0       0          0        1   \n",
+            "96    9    7         0       0          0        0   \n",
+            "97    3    4         0       0          0        1   \n",
+            "98    0    7         0       0          0        1   \n",
+            "99    8    0         0       0          0        0   \n",
             "\n",
             "    Blindspot(blocked=1/not blocked=0)  \n",
-            "6                                    1  \n",
-            "7                                    0  \n",
-            "9                                    0  \n",
-            "19                                   0  \n",
-            "54                                   0  \n",
-            "73                                   1  \n",
-            "79                                   0  \n",
-            "88                                   1  \n",
-            "91                                   0  \n",
-            "95                                   1  \n",
-            "    row  col  obstacle  tx_row  tx_column  covered  \\\n",
-            "1     6    4         0       0          0        1   \n",
-            "13    6    3         0       0          0        1   \n",
-            "18    6    8         0       0          0        0   \n",
-            "25    6    7         0       0          0        0   \n",
-            "40    6    5         1       0          0        0   \n",
-            "51    6    2         0       0          0        1   \n",
-            "59    6    1         0       0          0        1   \n",
-            "72    6    9         0       0          0        0   \n",
-            "81    6    0         0       0          0        1   \n",
-            "86    6    6         0       0          0        0   \n",
-            "\n",
-            "    Blindspot(blocked=1/not blocked=0)  \n",
+            "0                                    1  \n",
             "1                                    0  \n",
-            "13                                   0  \n",
-            "18                                   1  \n",
-            "25                                   1  \n",
-            "40                                   0  \n",
-            "51                                   0  \n",
-            "59                                   0  \n",
-            "72                                   1  \n",
-            "81                                   0  \n",
-            "86                                   1  \n",
+            "2                                    1  \n",
+            "3                                    0  \n",
+            "4                                    0  \n",
+            "..                                 ...  \n",
+            "95                                   0  \n",
+            "96                                   1  \n",
+            "97                                   0  \n",
+            "98                                   0  \n",
+            "99                                   1  \n",
+            "\n",
+            "[100 rows x 7 columns]\n",
+            "    row  col  obstacle  tx_row  tx_column  covered  \\\n",
+            "0     4    8         0       0          0        0   \n",
+            "1     2    8         0       0          0        0   \n",
+            "2     8    5         1       0          0        0   \n",
+            "3     8    3         0       0          0        1   \n",
+            "4     1    4         0       0          0        1   \n",
+            "..  ...  ...       ...     ...        ...      ...   \n",
+            "95    0    1         0       0          0        1   \n",
+            "96    1    8         0       0          0        0   \n",
+            "97    0    0         0       0          0        1   \n",
+            "98    9    6         0       0          0        0   \n",
+            "99    9    5         1       0          0        0   \n",
+            "\n",
+            "    Blindspot(blocked=1/not blocked=0)  \n",
+            "0                                    1  \n",
+            "1                                    1  \n",
+            "2                                    0  \n",
+            "3                                    0  \n",
+            "4                                    0  \n",
+            "..                                 ...  \n",
+            "95                                   0  \n",
+            "96                                   1  \n",
+            "97                                   0  \n",
+            "98                                   1  \n",
+            "99                                   0  \n",
+            "\n",
+            "[100 rows x 7 columns]\n",
             "\n",
             "## Blind Spot Classification Report\n",
             "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.00      0.00      0.00         6\n",
-            "           1       0.40      1.00      0.57         4\n",
+            "           0       0.60      0.60      0.60        60\n",
+            "           1       0.40      0.40      0.40        40\n",
             "\n",
-            "    accuracy                           0.40        10\n",
-            "   macro avg       0.20      0.50      0.29        10\n",
-            "weighted avg       0.16      0.40      0.23        10\n",
+            "    accuracy                           0.52       100\n",
+            "   macro avg       0.50      0.50      0.50       100\n",
+            "weighted avg       0.52      0.52      0.52       100\n",
             "\n",
             "\n",
             "## Confusion Matrix\n",
             "\n",
-            "[[0 6]\n",
-            " [0 4]]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/usr/local/lib/python3.11/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/usr/local/lib/python3.11/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+            "[[36 24]\n",
+            " [24 16]]\n"
           ]
         }
       ]
